# libsms

./: .gitignore  CMakeLists.txt  INSTALL.windows  INSTALL_WINDOWS.md  Makefile  README  README.md  SConstruct  log.org  readme.txt
doc/: Doxyfile  changes.txt  log.org  maindoxypage.txt
examples/: britney.yaml  guitarchord  ocarina  piano.yaml  piano5.sms  piano5.yaml  sax  smsPlot.py  soopastar
examples/audio/: piano.aiff
man/: smsAnal.1  smsClean.1  smsPrint.1  smsResample.1  smsSynth.1  smsToYaml.1
pd/: .sconsign.dblite  README  SConscript  SConstruct  log.org  smsSynthFile~-compile  smsSynthFile~-help.pd  smsSynthFile~-test.pd  smsSynthFile~.c  smsanal.c  smsbuf.c  smsedit.c  smspd-help.pd  smspd.c  smspd.h  smssynth~.c
pd/help/: dak~.pd  sms-help.pd  smsanal-help.pd  smsbuf-help.pd  smsedit-help.pd  smssynth~-help.pd
pd/pd/: smssynth~-help.pd
pd/test/: all.pd
python/: AnalysisSynthesis.py  SMS.py  __init__.py  analysis.py  makemodule  modify_examples.py  printWindow.py  pysms.i  readme.txt  setup.py  sms.i  sms.py  sms_wrap.c  synthesis.py  test_cepstrum.py  test_dbmag.py  test_getFrameDet.py  test_getTrack.py  test_readsms.py  test_spectrum.py
python/examples/: cepEnv.py  modify_examples.py  synth.py
python/pysms/: __init__.py  analysis.py  pysms.i  synthesis.py
python/test/: test_analysis.py  test_cepstrum.py  test_dbmag.py  test_getFrameDet.py  test_getTrack.py  test_readsms.py  test_spectrum.py  test_window.py
src/: Makefile  OOURA.c  OOURA.h  SConscript  SFMT.c  analysis.c  cepstrum.c  covLatticeHarm.c  fileIO.c  filterArray.c  filters.c  fixTracks.c  fixTrajectories.c  fourier.c  getResidual.c  harmDetection.c  hybridize.c  interpolateArrays.c  modify.c  peakContinuation-new.C  peakContinuation.c  peakDetection.c  realft.c  residual.c  sinTab.c  sincTab.c  sineSynth.c  sms.c  sms.h  smsAnalysis.c  smsIO.c  smsSynthesis.c  sms_export.h  soundIO.c  spectralApprox.c  spectrum.c  stocAnalysis.c  synthesis.c  tables.c  transforms.c  (+2 more)
test/: analyze.py  log.org  plotArray.py  smsPlot.py  stft.py
test/audio/: piano.aiff
tools/: Makefile  README  SConscript  calcCorr.c  correlation.c  printWindow.c  smsAnal.c  smsAnal.h  smsClean.c  smsMod.c  smsPrint.c  smsResample.c  smsSynth.c  smsSynthDet.c  smsToLisp.c  smsToML.c  smsToYaml.c  smsUndB.c  sndReverse.c
